--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <form class="flex mx-10 lg:mx-80 md:mx-36 bookmark-form">
         <input
-          type="text"
+          type="text" placeholder="Enter your bookmarkslink"
           class="block w-full px-4 py-3 rounded-l-lg outline-none"
         />
         <button
@@ -66,7 +66,7 @@
     <div class="footer mt-40">
       <h3 class="text-center text-lg text-white">
         Design and Developed By
-        <a href="http://raqibnur.com" class="text-red-500">Raqinur</a>
+        <a href="http://raqibnur.com" class="text-red-500">Raqibnur</a>
       </h3>
     </div>
 
